# wordpress-album-metadata-filler

./: .gitignore  README.md  album-art-picker-v2-analysis.md  example.env  plan.md  post_to_album.py  pyproject.toml  questions.md  scf-export-2026-06-18.json  scf-export-2026-07-05.json  scf-export-2026-07-23.json  scf-export-field-meanings.md  spotify-album-blog-tracker-analysis-report.md  vision.md
docs/superpowers/plans/: 2026-06-18-wordpress-metadata-backfill.md  2026-06-19-wordpress-metadata-backfill-derived-fields.md
docs/superpowers/specs/: 2026-06-18-wordpress-metadata-backfill-design.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-19/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/post_to_album/: __init__.py  cli.py  config.py  diff.py  enrich.py  lastfm.py  models.py  normalize.py  report.py  wordpress_api.py
tests/: test_cli.py  test_config.py  test_diff.py  test_end_to_end_workflow.py  test_lastfm.py  test_normalize.py  test_planned_json_and_replay.py  test_report.py  test_scf_and_wordpress_payload.py  test_scf_schema_contract.py  test_search_and_matching.py  test_wordpress_api.py
tests/fixtures/: lastfm_album.json
wordpress-album-metadata-overhaul-plans/: 00-overhaul-index.md  01-search-and-matching-plan.md  02-scf-and-wordpress-payload-plan.md  03-planned-json-and-replay-plan.md  04-implementation-order-and-tests.md
