[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-to-album"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.28",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "pytest-httpx>=0.30,<0.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
